--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,6 @@
+set -g status-keys vi
+set -g mode-keys vi
+
 # Use C-j and C-f for prefix
 set-option -g prefix C-f
 # set-option -g prefix2 C-j
@@ -20,3 +23,20 @@ bind -n M-j select-pane -D
 # Navigation between windows
 bind -n M-Left previous-window
 bind -n M-Right next-window
+
+
+# ***Status line Configuration***    
+
+# Space or comma separated list of options
+set -g status-position top
+set -g status-justify centre
+# Status left
+set -g status-left-style "bg=white fg=blue"
+set -g status-left "[#S]"
+# Status centre
+set -g status-style "bg=default fg=magenta"
+# Status right
+set -g status-right-style "bg=white fg=blue"
+
+# Changes the active window style in status line
+set -g window-status-current-style "fg=cyan underscore"
