--- a/.tmux.conf
+++ b/.tmux.conf
@@ -31,6 +31,7 @@ bind -n M-Right next-window
 set -g status-position top
 set -g status-justify centre
 # Status left
+set -g status-left-length 20
 set -g status-left-style "bg=white fg=blue"
 set -g status-left "[#S]"
 # Status centre
