--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,6 @@
 set -g status-keys vi
 set -g mode-keys vi
+# set-window-option -g mode-keys vi
 
 # Use C-j and C-f for prefix
 set-option -g prefix C-f
@@ -20,10 +21,14 @@ bind -n M-l select-pane -R
 bind -n M-k select-pane -U
 bind -n M-j select-pane -D
 
+bind -T copy-mode-vi M-h select-pane -L
+bind -T copy-mode-vi M-l select-pane -R
+bind -T copy-mode-vi M-k select-pane -U
+bind -T copy-mode-vi M-j select-pane -D
+
 # Navigation between windows
 bind -n M-Left previous-window
 bind -n M-Right next-window
-
 
 # ***Status line Configuration***    
 
