nvim suggested changes

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -46,3 +46,8 @@ set -g status-right-style "bg=white fg=blue"
 
 # Changes the active window style in status line
 set -g window-status-current-style "fg=cyan underscore"
+
+
+# Changes as shown in nvim :checkhealth
+set-option -g focus-events on
+set-option -a terminal-features 'xterm-256color:RGB'
